[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-gateway"
authors = [
  { name="Firefox2100", email="wangyunze16@gmail.com" },
]
description = "A LLM inference gateway to route requests to nodes behind NAT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "argon2-cffi~=25.1.0",
    "fastapi~=0.136.3",
    "pydantic~=2.13.4",
    "pyyaml~=6.0.3",
    "sqlmodel~=0.0.38",
    "uvicorn~=0.48.0",
    "websockets~=16.0",
]
dynamic = [
    "version"
]

[project.optional-dependencies]
test = [
    "pytest~=9.0.3",
    "pytest-asyncio~=1.4.0",
    "pytest-cov~=7.1.0",
    "pylint~=4.0.5",
]
sqlite = [
    "aiosqlite~=0.22.1",
]
all = [
    "aiosqlite~=0.22.1",
]

[project.urls]
Homepage = "https://github.com/Firefox2100/llm-gateway"
Repository = "https://github.com/Firefox2100/llm-gateway.git"
Issues = "https://github.com/Firefox2100/llm-gateway/issues"

[tool.setuptools.dynamic]
version = {attr = "llm_gateway.__version__"}
